--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   padding: 20px;
   background-image: url(./images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
-  background-size: 100% 400px;
+  background-size: 100% 50vh;
   background-color: hsl(225, 100%, 98%);
   font-family: 'Red Hat Display', sans-serif;
 }
