--- a/src/components/OrderSummary.css
+++ b/src/components/OrderSummary.css
@@ -15,8 +15,7 @@
 
 .order-summary__text {
     margin: 0 auto;
-    padding: 5px;
-    max-width: 70%;
+    padding: 5px 30px;
     color: grey;
     line-height: 1.6;
 }
